# learn_fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: ci-run-unit-tests.yaml  pipeline.yaml  run-unit-tests.yaml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 7aeeb72a934f_update_users_table_new_column_updated_at.py  9f795f85ec24_create_todos_table.py  b538044d84a8_create_users_table.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_models.py  test_security.py  test_todos.py  test_users.py
